# rubric

./: .gitignore  CHANGELOG.md  FAQ.md  HELP.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASE.md  RELEASING.md  Rubric-0.13.0-x86_64.AppImage  Rubric-0.14.0-x86_64.AppImage  Rubric-0.14.2-x86_64.AppImage  Rubric-0.14.3-x86_64.AppImage  bible_api.py  build-appimage.sh  build-deb.sh  build-rpm.sh  capture-screenshots.sh  dev-build.sh  flatpak-test.sh  hymn_lookup.py  hymn_suggestions.py  install-appimage.sh  install.sh  io.github.calstfrancis.rubric.metainfo.xml  io.github.calstfrancis.rubric.yml  observances.py  publish-flatpak.sh  pyproject.toml  rcl_data.py  refactor.md  rubric-launcher.sh  rubric-liturgy-0.14.4-1.noarch.rpm  rubric-liturgy_0.14.4_all.deb  rubric.py  rubric_redesign_mockup.html  rubric_setup.py  snippets.py  test_bible_api.py  test_hymn_lookup.py  (+4 more)
.claude/: settings.local.json
.github/workflows/: publish.yml  release.yml  tests.yml
AppDir/: AppRun  io.github.calstfrancis.rubric.desktop
data/: hymn_suggestions.json
rubric_package/: __init__.py  db.py  github_auth.py  secret_store.py
rubric_package/data/: CHANGELOG.md  FAQ.md  HELP.md  hymn_suggestions.json  typst.lang
rubric_package/exporters/: __init__.py  bulletin_exporter.py
rubric_package/models/: __init__.py  config.py  service.py
rubric_package/panels/: __init__.py  hymn_lookup_panel.py  main_chrome.py  order_panel.py  palette_panel.py  preamble_panel.py
rubric_package/preview/: __init__.py  bulletin_preview.py
rubric_package/templates/: _shared.typ  bulletin_digital.typ  bulletin_print.typ  manuscript.typ
rubric_package/utils/: __init__.py  colors.py  git_conflicts.py  helpers.py  latex.py  rich_typst.py  typst.py
rubric_package/views/: __init__.py  bible_viewer.py  bulletin_prefs_window.py  dates_editor_window.py  element_content.py  github_signin.py  help_window.py  observance_wiki_window.py  preferences_window.py  service_planning_notes_window.py  services_window.py
screenshots/: demo.liturgy
tests/: __init__.py  test_db.py  test_models.py  test_observances.py  test_panels.py  test_utils.py
