[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubric-liturgy"
version = "0.14.7"
description = "A GNOME-native worship service planning tool for United Church of Canada ministry"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Religion",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Office/Business",
]

[project.scripts]
rubric = "rubric:main"
rubric-desktop-install = "rubric_setup:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true

[tool.setuptools]
py-modules = ["rubric", "rubric_setup", "bible_api", "hymn_lookup", "hymn_suggestions", "observances", "rcl_data", "snippets"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rubric_package*"]

[tool.setuptools.package-data]
rubric_package = ["py.typed", "data/*.json", "data/*.svg", "data/*.md"]
